moved to two seperate plays

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,7 @@
 ---
-# tasks file for aws-route
+- include: create.yml
+  when:
+    - create is defined
+- include: rollback.yml
+  when:
+    - rollback is defined
